# Thesis

./: .breakpoints  .replit  CNNLSTMNeuroProbModel.ipynb  FeatureEngineering  HybridModelCNNLSTM.ipynb  LSTM_V0.ipynb  ModelBlock1V0.py  hybridDEBUG (1).ipynb  hybridModelCNNLSTML1L2.ipynb  hybridModelCNNLSTMok.ipynb  hybridModelFCLSTM.ipynb  hybridModelFCLSTM_L1L2Reg.ipynb  main.py  pyproject.toml  replit.nix
FeatureEngineering&DATA/: DIX.csv  DIXGEX.csv  DXY.csv  DataPreProcessing.py  FeatureEngineeringV0.py  SPX.csv  scaler.pkl
MODELS_2.0/RWIN_CNNLSTM1/: ReadMe CNNLSTM.docx
MODELS_2.0/RWIN_FCLSTM/: ReadMe_  FCLSTM.docx
Model/: 72TRVLWinCNNLSTM24h_L1L2.ipynb  LSTM_V0.pth  ModelLSTM.py  VhybridModel2FCLSTM.ipynb  hybrid2FCLSTM24h_L1L2.ipynb  hybridCNNLSTM24h_L1L2.ipynb  hybridModel2FCLSTM._epoch_99_loss_0.0014.pth  hybridModel2FCLSTM_L1L2Reg.ipynb  hybridModel2FCLSTM_L1L2Reg_epoch_99_loss_0.0007.pth  hybridModelCNNLSTML1L2.ipynb  hybridModelCNNLSTML1L2.ipynb_epoch_83_loss_0.0011.pth  hybridModelCNNLSTML1L2.ipynb_epoch_99_loss_0.0008.pth  hybridModelCNNLSTMok (1).ipynb  hybridModelCNNLSTMok_epoch_27_loss_0.0034.pth  hybridModelCNNLSTMok_epoch_99_loss_0.0007.pth  hybridModelCNNLSTMok_epoch_99_loss_0.0083.pth  hybridModelFCLSTML1L2.ipynb  hybridModelFCLSTML1L2_epoch_99_loss_0.0007.pth  hybridModelFCLSTM_L1L2Reg.pth  hybridModelFCLSTM_epoch_20_loss_0.0322.pth
ResultOutput/RWIN_CNNLSTM1/: ReadMe CNNLSTM.docx
ResultOutput/RWIN_FCLSTM/: ReadMe_  FCLSTM.docx
model/: 72TRVLWinCNNLSTM24h_L1L2.ipynb
(+35 files in other folders)
