[tool.poetry]
name = "repl-nix-thesis-recov"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_thesis_recov"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
pandas-ta = "^0.3.14b0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
finta = "^1.3"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
